# cartconf

./: .gitignore  Cargo.toml  README.rst  parse.py  pyproject.toml  requirements_pip.txt  setup.py
.github/workflows/: backend.yml  ci.yml  frontend.yml  lint.yml  review.yml
cartconf/: __init__.py  cartesian_config.py  constants.py  exceptions.py  filters.py  parse.py  parser.py  tokens.py  utils.py
cartconf/plugins/: varianter.py
src/: lib.rs  some.rs  tokens.rs
tests/: example.cfg  test_cartesian_config.py  test_filters.py  test_parser.py  test_tokens.py  test_utils.py
