[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "avocado-framework-plugin-varianter-cartconf"
requires-python = ">=3.8"
description = "Avocado Varianter plugin to parse Cartesian configuration into variants"
readme = "README.rst"
readme-content-type = "text/x-rst"
authors = [
    { name = "Avocado Developers", email = "avocado-devel@redhat.com" }
]
homepage = "http://avocado-framework.github.io/"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = ["avocado-framework==109.0"]

[tool.maturin]
features = ["pyo3/extension-module"]

[project.entry-points."avocado.plugins.init"]
cartconf = "cartconf.plugins.varianter:CartConfInit"

[project.entry-points."avocado.plugins.cli"]
cartconf = "cartconf.plugins.varianter:CartConfCLI"

[project.entry-points."avocado.plugins.varianter"]
cartconf = "cartconf.plugins.varianter:CartConf"
